fix x close align center

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -63,7 +63,7 @@ body {
   width: 24px;
   display: flex;
   align-items: center;
-  justify-content: right;
+  justify-content: center;
   border: 1px solid #eee;
   padding: 0;
 }
